# docs/swagger.json
@@ -26,7 +26,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "start date",
+                        "description": "start date (format YYYY-MM-DD)",
                         "name": "start_date",
                         "in": "path",
                         "required": true
@@ -36,16 +36,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.TaiwanStockPriceResponse"
+                            "$ref": "#/definitions/models.TaiwanStockPriceAPIResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.APIResponse"
                         }
                     }
                 }
@@ -65,19 +68,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/jobs.JobStatus"
-                            }
+                            "$ref": "#/definitions/models.JobsAPIResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.APIResponse"
                         }
                     }
                 }
@@ -85,7 +82,16 @@
         }
     },
     "definitions": {
-        "jobs.JobStatus": {
+        "models.APIResponse": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.JobStatus": {
             "type": "object",
             "properties": {
                 "id": {
@@ -101,6 +107,20 @@
                     "type": "string"
                 },
                 "spec": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.JobsAPIResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.JobStatus"
+                    }
+                },
+                "error": {
                     "type": "string"
                 }
             }
@@ -140,7 +160,7 @@
                 }
             }
         },
-        "models.TaiwanStockPriceResponse": {
+        "models.TaiwanStockPriceAPIResponse": {
             "type": "object",
             "properties": {
                 "data": {
@@ -149,11 +169,8 @@
                         "$ref": "#/definitions/models.StockPrice"
                     }
                 },
-                "message": {
+                "error": {
                     "type": "string"
-                },
-                "status": {
-                    "type": "integer"
                 }
             }
         }
